--- a/src/Pages/contact.css
+++ b/src/Pages/contact.css
@@ -85,3 +85,25 @@ h1 {
         width:80vw;
     }
 }
+
+
+@media (max-width :768px){
+
+    img.die{
+        max-width:0%;
+    }
+    input.contact-inputs{
+        font-size: 13px;
+    }
+    textarea.contact-inputs{
+        font-size: 13px;
+    }
+    button.sma{
+        width:35%;
+        font-size: 13px;
+    }
+    h2.gitw{
+        font-size: 28px;
+    }
+    
+  }
